--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
 
 
     <style>
-    @import url(https://www.google.com/fonts#QuickUsePlace:quickUse/Family:Raleway:700);
+
+    /* Other styles */
+    html, body {
+    height: 100%;
+    }
+
+    body {
+    background: #efefef;
+    font: 14.5em/1 "co-headline",sans-serif;
+    }
+
+    svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    }
 
     .text {
 
@@ -53,22 +69,7 @@
     }
 
 
-    /* Other styles */
-    html, body {
-    height: 100%;
-    }
 
-    body {
-    background: #efd3f4;
-    font: 14.5em/1 Raleway, Impact;
-    }
-
-    svg {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    }
     </style>
 
 </head>
@@ -87,5 +88,10 @@
     <use class="text" xlink:href="#s-text"></use>
     <use class="text" xlink:href="#s-text"></use>
     <use class="text" xlink:href="#s-text"></use></svg>
+
+    <!-- TypeKit fonts -->
+    <script src="https://use.typekit.net/yua1hfn.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
 </body>
 </html>
