--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     }
 
     body {
-    background: #efefef;
-    font: 14.5em/1 "co-headline",sans-serif;
+    background: #fcfcfc;
+    font: sans-serif;
     }
 
     svg {
@@ -28,7 +28,7 @@
     .text {
 
     fill: none;
-    stroke-width: 6;
+    stroke-width: 5;
     stroke-linejoin: round;
     stroke-dasharray: 70 330;
     stroke-dashoffset: 0;
@@ -77,18 +77,20 @@
 <body>
     <svg viewbox="0 0 1320 300">
     <!-- Symbol -->
-    <symbol id="s-text">
-        <text dy=".35em" text-anchor="middle" x="35%" y="50%">
+    <symbol id="logotype">
+        <text dy=".35em" text-anchor="middle" x="50%" y="50%">
             bloom
         </text>
     </symbol>
     <!-- Duplicate symbols -->
-    <use class="text" xlink:href="#s-text"></use>
-    <use class="text" xlink:href="#s-text"></use>
-    <use class="text" xlink:href="#s-text"></use>
-    <use class="text" xlink:href="#s-text"></use>
-    <use class="text" xlink:href="#s-text"></use></svg>
+    <use class="text" xlink:href="#logotype"></use>
+    <use class="text" xlink:href="#logotype"></use>
+    <use class="text" xlink:href="#logotype"></use>
+    <use class="text" xlink:href="#logotype"></use>
+    <use class="text" xlink:href="#logotype"></use></svg>
 
+    <h4>Bloom Interactive is a forthcoming digital agency</h4>
+    <p>Check back soon</p>
     <!-- TypeKit fonts -->
     <script src="https://use.typekit.net/yua1hfn.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
