pushing for a final

--- a/index.html
+++ b/index.html
@@ -8,23 +8,34 @@
 
     <style>
 
-    /* Other styles */
+    /* Main styles */
     html, body {
     height: 100%;
     }
 
     body {
     background: #fcfcfc;
-    font: sans-serif;
+    font: 14.5em "co-headline", sans-serif;
     }
 
-    svg {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+    h1 {
+      font-family:  "co-headline", sans-serif;
+      color: #777;
+      text-align: center;
     }
 
+    h4, a {
+      font-family: helvetica, arial, sans-serif;
+      color: #777;
+      text-align: center;
+    }
+
+    a:hover{
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+    /* SVG CSS magic */
     .text {
 
     fill: none;
@@ -38,21 +49,21 @@
 
     .text:nth-child(5n + 1) {
     stroke: #F2385A;
-    -webkit-animation-delay: -1.2s;
-    animation-delay: -1.2s;
+    -webkit-animation-delay: -1s;
+    animation-delay: -1s;
     }
 
     .text:nth-child(5n + 2) {
     stroke: #F5A503;
-    -webkit-animation-delay: -2.4s;
-    animation-delay: -2.4s;
+    -webkit-animation-delay: -3.5s;
+    animation-delay: -3.5s;
     }
 
 
     .text:nth-child(5n + 4) {
     stroke: #56D9CD;
-    -webkit-animation-delay: -4.8s;
-    animation-delay: -4.8s;
+    -webkit-animation-delay: -5s;
+    animation-delay: -5s;
     }
 
     .text:nth-child(5n + 5) {
@@ -78,7 +89,7 @@
     <svg viewbox="0 0 1320 300">
     <!-- Symbol -->
     <symbol id="logotype">
-        <text dy=".35em" text-anchor="middle" x="50%" y="50%">
+        <text dy=".35em" text-anchor="middle" x="50%" y="35%">
             bloom
         </text>
     </symbol>
@@ -89,8 +100,14 @@
     <use class="text" xlink:href="#logotype"></use>
     <use class="text" xlink:href="#logotype"></use></svg>
 
-    <h4>Bloom Interactive is a forthcoming digital agency</h4>
-    <p>Check back soon</p>
+    <div id="writeup" y="35%">
+      <h1>bloom interactive</h1>
+      <h4>We're rebuilding our site. Check back soon.</h4>
+      <a href="mailto:project@gobloom.com?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">I can't wait for that</a>
+
+    </div>
+
+
     <!-- TypeKit fonts -->
     <script src="https://use.typekit.net/yua1hfn.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
