reworking write up

--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
     font: 14.5em "co-headline", sans-serif;
     }
 
-    h1 {
-      font-family:  "co-headline", sans-serif;
-      color: #777;
-      text-align: center;
-    }
-
     h4, a {
       font-family: helvetica, arial, sans-serif;
       color: #777;
       text-align: center;
+      margin: 0 auto;
+      text-decoration: none;
+      font-size: 24px;
     }
 
     a:hover{
@@ -100,10 +97,8 @@
     <use class="text" xlink:href="#logotype"></use>
     <use class="text" xlink:href="#logotype"></use></svg>
 
-    <div id="writeup" y="35%">
-      <h1>bloom interactive</h1>
-      <h4>We're rebuilding our site. Check back soon.</h4>
-      <a href="mailto:project@gobloom.com?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">I can't wait for that</a>
+    <div id="writeup">
+      <h4>We're rebuilding our site. <a href="mailto:project@gobloom.com?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">I can't wait for that</a></h4>
 
     </div>
 
