--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="description" content="A budding digital agency with the power to transform ideas.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <style>
 
     /* Main styles */
@@ -24,7 +23,7 @@
       text-align: center;
       margin: 0 auto;
       text-decoration: none;
-      font-size: 24px;
+      font-size: 1.5em;
     }
 
     a:hover{
@@ -32,6 +31,9 @@
       cursor: pointer;
     }
 
+    p {
+      font-size: 14px;
+    }
     /* SVG CSS magic */
     .text {
 
@@ -86,7 +88,7 @@
     <svg viewbox="0 0 1320 300">
     <!-- Symbol -->
     <symbol id="logotype">
-        <text dy=".35em" text-anchor="middle" x="50%" y="35%">
+        <text dy=".35em" text-anchor="middle" x="50%" y="50%">
             bloom
         </text>
     </symbol>
@@ -98,8 +100,7 @@
     <use class="text" xlink:href="#logotype"></use></svg>
 
     <div id="writeup">
-      <h4>We're rebuilding our site. <a href="mailto:project@gobloom.com?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">I can't wait for that</a></h4>
-
+      <h4><a href="mailto:project@gobloom.com?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">We're rebuilding our site.</a></h4>
     </div>
 
 
