--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
       }
 
     }
+
+    #logotype-container{
+
+    }
+
+    @media screen and (max-width: 880px) {
+      #logotype-container{
+        margin-top: -10vh;
+      }
+    }
     /* SVG CSS magic */
     .text {
 
@@ -58,27 +68,27 @@
 
     .text:nth-child(5n + 1) {
     stroke: #F2385A;
-    -webkit-animation-delay: -1s;
-    animation-delay: -1s;
+    -webkit-animation-delay: -1.2s;
+    animation-delay: -1.2s;
     }
 
     .text:nth-child(5n + 2) {
     stroke: #F5A503;
-    -webkit-animation-delay: -3.5s;
-    animation-delay: -3.5s;
+    -webkit-animation-delay: -3.3s;
+    animation-delay: -3.3s;
     }
 
 
     .text:nth-child(5n + 4) {
     stroke: #56D9CD;
-    -webkit-animation-delay: -5s;
-    animation-delay: -5s;
+    -webkit-animation-delay: -5.2s;
+    animation-delay: -5.2s;
     }
 
     .text:nth-child(5n + 5) {
     stroke: #3AA1BF;
-    -webkit-animation-delay: -6s;
-    animation-delay: -6s;
+    -webkit-animation-delay: -6.5s;
+    animation-delay: -6.5s;
     }
 
 
@@ -95,19 +105,21 @@
 </head>
 
 <body>
-    <svg viewbox="0 0 1320 300">
-    <!-- Symbol -->
-    <symbol id="logotype">
-        <text dy=".35em" text-anchor="middle" x="50%" y="50%">
-            bloom
-        </text>
-    </symbol>
-    <!-- Duplicate symbols -->
-    <use class="text" xlink:href="#logotype"></use>
-    <use class="text" xlink:href="#logotype"></use>
-    <use class="text" xlink:href="#logotype"></use>
-    <use class="text" xlink:href="#logotype"></use>
-    <use class="text" xlink:href="#logotype"></use></svg>
+    <div id="logotype-container">
+        <svg viewbox="0 0 1320 300">
+        <!-- Symbol -->
+        <symbol id="logotype">
+            <text dy=".35em" text-anchor="middle" x="50%" y="50%">
+                bloom
+            </text>
+        </symbol>
+        <!-- Duplicate symbols -->
+        <use class="text" xlink:href="#logotype"></use>
+        <use class="text" xlink:href="#logotype"></use>
+        <use class="text" xlink:href="#logotype"></use>
+        <use class="text" xlink:href="#logotype"></use>
+        <use class="text" xlink:href="#logotype"></use></svg>
+    </div>
 
     <div id="writeup">
       <h4><a href="mailto:project@gobloom.com?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">We're rebuilding our site.</a></h4>
