attacking landscape mode thought 1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     /* Main styles */
     html, body {
     height: 100%;
+    min-height: 666px;
     }
 
     body {
@@ -34,7 +35,7 @@
     p {
       font-size: 14px;
     }
-
+/*
     @media screen and (max-width: 800px) #write-up {
       #write-up, h4, a {
           max-width: 560px;
@@ -44,7 +45,7 @@
       }
 
     }
-
+*/
     #logotype-container{
 
     }
@@ -54,6 +55,13 @@
         margin-top: -10vh;
       }
     }
+
+    @media only screen and (max-device-width : 960px) and (orientation : landscape) {
+      html, body {
+      height: 100px;
+      }
+    }
+
     /* SVG CSS magic */
     .text {
 
