changing the pink timing

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
     .text:nth-child(5n + 1) {
     stroke: #F2385A;
-    -webkit-animation-delay: -1.2s;
-    animation-delay: -1.2s;
+    -webkit-animation-delay: -.2s;
+    animation-delay: -.2s;
     }
 
     .text:nth-child(5n + 2) {
