changing email address

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
 
     <div id="writeup">
-      <h4><a href="mailto:project@gobloom.com?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">We're rebuilding our site.</a></h4>
+      <h4><a href="mailto:project@gobloom.io?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">We're rebuilding our site.</a></h4>
     </div>
 
 
