--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
     </div>
 
     <div id="writeup">
-      <h4><a href="mailto:project@gobloom.io?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">We're rebuilding our site.</a></h4>
+      <h3>Bloom is a digital agency based out of Denver, CO</h3>
+      <p>Our professional degrees in water chemistry and evolutionary cell biology help us understand how it is that tiny details can come together and bloom into something beautiful.</p>
+      <p>As we continue to rebuild our site, please don't hesitate to reach out to us at <a href="mailto:project@gobloom.io?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">project@gobloom.io</a></p>
     </div>
 
 
