--- a/index.html
+++ b/index.html
@@ -4,111 +4,8 @@
     <title>Bloom Interactive</title>
     <meta name="description" content="A budding digital agency with the power to transform ideas.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-
-    /* Main styles */
-    html, body {
-    height: 100%;
-    min-height: 444px;
-    }
-
-    body {
-    background: #fcfcfc;
-    font: 14.5em "co-headline", sans-serif;
-    }
-
-    h4, a {
-      font-family: helvetica, arial, sans-serif;
-      color: #777;
-      text-align: center;
-      margin: 0 auto;
-      text-decoration: none;
-      font-size: 1.5rem;
-    }
-
-    a:hover{
-      text-decoration: underline;
-      cursor: pointer;
-    }
-
-    p {
-      font-size: 14px;
-    }
-/*
-    @media screen and (max-width: 800px) #write-up {
-      #write-up, h4, a {
-          max-width: 560px;
-          width: 60%;
-          min-width: 300px;
-          font-size: 1rem;
-      }
-
-    }
-*/
-    #logotype-container{
-
-    }
-
-    @media screen and (max-width: 880px) {
-      #logotype-container{
-        margin-top: -10vh;
-      }
-    }
-
-    @media only screen and (max-device-width : 960px) and (orientation : landscape) {
-      html, body {
-      height: 100px;
-      }
-    }
-
-    /* SVG CSS magic */
-    .text {
-
-    fill: none;
-    stroke-width: 5;
-    stroke-linejoin: round;
-    stroke-dasharray: 70 330;
-    stroke-dashoffset: 0;
-    -webkit-animation: stroke 6s infinite linear;
-    animation: stroke 6s infinite linear;
-    }
-
-    .text:nth-child(5n + 1) {
-    stroke: #F2385A;
-    -webkit-animation-delay: -.2s;
-    animation-delay: -.2s;
-    }
-
-    .text:nth-child(5n + 2) {
-    stroke: #F5A503;
-    -webkit-animation-delay: -3.3s;
-    animation-delay: -3.3s;
-    }
-
-
-    .text:nth-child(5n + 4) {
-    stroke: #56D9CD;
-    -webkit-animation-delay: -5.2s;
-    animation-delay: -5.2s;
-    }
-
-    .text:nth-child(5n + 5) {
-    stroke: #3AA1BF;
-    -webkit-animation-delay: -7.5s;
-    animation-delay: -7.5s;
-    }
-
-
-    @keyframes stroke {
-    100% {
-    stroke-dashoffset: -400;
-    }
-    }
-
-
-
-    </style>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
@@ -126,12 +23,12 @@
         <use class="text" xlink:href="#logotype"></use>
         <use class="text" xlink:href="#logotype"></use>
         <use class="text" xlink:href="#logotype"></use>
-        <use class="text" xlink:href="#logotype"></use></svg>
+        <use class="text" xlink:href="#logotype"></use>
+      </svg>
     </div>
 
-    <div id="writeup">
-      <h3>Bloom is a digital agency based out of Denver, CO</h3>
-      <p>Our professional degrees in water chemistry and evolutionary cell biology help us understand how it is that tiny details can come together and bloom into something beautiful.</p>
+    <div class="writeUp">
+      <h3>We are a digital agency with the power to transform ideas.</h3>
       <p>As we continue to rebuild our site, please don't hesitate to reach out to us at <a href="mailto:project@gobloom.io?subject=I%20have%20a%20sweet%20project%20you%20should%20work%20on">project@gobloom.io</a></p>
     </div>
 
